重构;添加文字页面

--- a/NoteDemo/app/src/main/AndroidManifest.xml
+++ b/NoteDemo/app/src/main/AndroidManifest.xml
@@ -22,7 +22,12 @@
         </activity>
 
         <activity
-            android:name=".MyWebviewActivity"
+            android:name=".PreviewWebviewActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".AddWordActivity"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
