--- a/NoteDemo/app/src/main/AndroidManifest.xml
+++ b/NoteDemo/app/src/main/AndroidManifest.xml
@@ -29,8 +29,7 @@
         <activity
             android:name=".AddWordActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize">
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
